--- a/public/theme/assets/css/style.css
+++ b/public/theme/assets/css/style.css
@@ -64,7 +64,7 @@ html {
 
 body {
   font: normal 300 1.4rem/1.86 "Poppins", sans-serif;
-  color: #666666;
+  color: #000000;
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -16863,3 +16863,14 @@ button:focus {
 /* '' */
 
 /*# sourceMappingURL=style.css.map */
+.about-us{
+  max-width:800px;
+  padding:100px;
+  margin:0 auto;
+  text-align: center;
+  color:#000000 !important;
+}
+
+.about-us p{
+  color:#000000 !important;
+}
