--- a/public/theme/assets/css/demos/demo-6.css
+++ b/public/theme/assets/css/demos/demo-6.css
@@ -215,7 +215,7 @@
   font-size: 1.6rem;
   line-height: 1.625; }
   .deal-content h4 {
-    color: #cc9966;
+    color: #d62676;
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.3;
@@ -286,7 +286,7 @@
     text-overflow: ellipsis; }
   .deal-countdown .countdown-amount {
     display: inline-block;
-    color: #cc9966;
+    color: #d62676;
     font-weight: 400;
     font-size: 2.4rem;
     letter-spacing: -.025em;
@@ -365,7 +365,7 @@
   margin-bottom: 3.5rem; }
 
 .icon-box-icon {
-  color: #cc9966;
+  color: #d62676;
   font-size: 3.4rem;
   margin-bottom: 1.2rem; }
 
@@ -373,13 +373,14 @@
   font-size: 1.5rem;
   font-weight: 600;
   letter-spacing: .05em;
-  color: #fff; }
+  /* color: #fff;  */
+}
 
 .icon-box-content p:last-child {
   font-size: 1.3rem; }
 
 .primary-color {
-  color: #cc9966; }
+  color: #d62676; }
 
 .cta-box {
   color: #777;
@@ -444,7 +445,7 @@
     font-weight: 400;
     color: #777; }
     .blog-posts .read-more:hover, .blog-posts .read-more:focus {
-      color: #cc9966; }
+      color: #d62676; }
 
 .read-more {
   font-size: 1.5rem;
@@ -470,7 +471,7 @@
     line-height: 2em;
     margin-bottom: 1.8rem; }
   .footer .widget-about-info a {
-    color: #cc9966; }
+    color: #d62676; }
   .footer .widget-title {
     text-transform: uppercase;
     font-size: 1.5rem;
