--- a/public/theme/assets/css/demos/demo-5.css
+++ b/public/theme/assets/css/demos/demo-5.css
@@ -57,7 +57,8 @@
   margin-bottom: 1rem; }
 
 .intro-title {
-  font-family: 'flamingregular', serif;
+  /* font-family: 'flamingregular', serif; */
+  font-family: 'typodermic';
   font-weight: 400;
   font-size: 8.6rem;
   line-height: .75;
