Center Menu left on Mobile

--- a/public/theme/assets/css/style.css
+++ b/public/theme/assets/css/style.css
@@ -16915,6 +16915,10 @@ button:focus {
    .display-block{
      display: block !important;
    }
+   .mobile-left{
+       float:left;
+       margin-left:0px;
+   }
 }
 
 
